# AlSduisGathering

./: .gitignore  .replit  README.md  alsudais.db  app.py  build.sh  cert.pem  create_tables.py  deploy.sh  key.pem  package-lock.json  pyproject.toml  registeration.xlsx  render.yaml  replit.nix  requirements.txt  run_migration.py  table.html  update_db.py
.pythonlibs/include/python3.10/greenlet/: greenlet.h
backup/: registrations.db
instance/: registrations.db
migrations/: rename_mother_to_parent.py
migrations/versions/: 32317f92ec90_.py  eaffcfb8fa14_attconf.py
static/scripts/: webqr.js
static/styles/: cards.css  mystyle.css
templates/: add_prize.html  admin.html  admin_login.html  admin_navbar.html  base.html  card1.html  card2.html  cards.html  cards_menu.html  closed.html  confirm_attendence.html  edit_prize.html  index.html  master.html  not_in_sheet.html  prizes.html  qr_scanner copy.html  qr_scanner copy2 copy.html  qr_scanner.html  register.html  registered.html  short_ticket.html  ticket.html  withdraw_prize copy.html  withdraw_prize.html  withdraw_prize3.html
templates/includes/: admin_navbar.html  logout_button.html
