[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0"
flask-sqlalchemy = "^3.1.1"
pillow = "^10.0.1"
flask = "^2.3.3"
pandas = "^2.1.1"
openpyxl = "3.1.2"
flask-migrate = "^4.0.5"
flask-cors = "^4.0.0"
wtforms = "^3.1.1"
flask-wtf = "^1.2.1"
sqlalchemy = "^2.0.23"
bs4 = "^0.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
python-bidi = "^0.4.2"
arabic-reshaper = "^3.0.0"
icecream = "^2.1.3"
gunicorn = "^21.2.0"
werkzeug = "^3.0.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"